2009-Sep-10 tomytsai  Add Epics data collector level 1 (segment) node library in pds/epicsArch.
2009-Aug-22	weaver	Fixed overflow of nbins in MonDescXXX.  Added method for
			removing groups from MonCds.
2009-Aug-18	weaver	Tag V01-01-00.  Added Waveform and Image classes to mon with no
			integrating options.
2009-Aug-15	weaver	Tag V01-00-03.  Removed MsgAppliance usage.  Adjusted Acqiris
			OutOfSync checking for master EVG rate tolerances and fiducial
			count rollover.
2009-Aug-12	weaver	Tag V01-00-02.  Added timeout for control level transitions.
2009-Aug-7	weaver	Fix bug when using procSrv where camera frame sizes are reduced.
2009-Jul-22	weaver	Tag V01-00-01.  Uses additional vectoring field in TimeStamp.
			Added qualifiers to PartitionControl transitions.
2009-Jul-14	weaver  Tag V01-00-00.  Consistent with pdsdata V00-05-00.  Added calibration
			cycles.  Added sequencing in the Evr (nevents or time).  Source levels
			now identify themselves by DetInfo to the ControlLevel during platform
			discovery.  Recorded transitions are broadcast (AllEvents, AllRecorders
			multicast group) to all nodes.
2009-Jul-13     cpo     Fix bug where AcqManager was putting the same task on the queue
                        when reconfiguring.
2009-Jul-10     cpo     Support for configuration of acqiris from database
2009-Jul-07	weaver  Fixed SysClk::sample rollover in VmonEb histos.  Fixed recorder level fixup
			that added contributions from all event levels.
2009-Jun-01	weaver	Tag V00-09-00.  Consistent with pdsdata V00-04-00.  Added management/PartitionControl
			as a base for run control sequencer.
2009-Apr-16	weaver	Added Pulnix TM6740 camera.  Added occurrences to collection messages.
			Added function to drop evr multicasts and generate opal1k out-of-order (for testing).
			Fix in GenericPoolW to use counting semaphore for pool resource counting.
			Fix in Event Builder to keep good events in order.  Individual (errant) events can slip