@@ -88,9 +88,11 @@ void PartitionMember::message(const Node& hdr, const Message& msg)
 	    //  Initiate a datagram for all segment levels.
 	    else if (header().level()==Level::Segment) {
 	      CDatagram* ndg = 
-		new(&_pool) CDatagram(Datagram(tr, 
-					       _xtcType,
-					       header().procInfo()));
+		new(&_pool) CDatagram(Datagram(tr,_xtcType,header().procInfo()));
+	      if (tr.size() > sizeof(Transition)) {
+		const Xtc& tc = *reinterpret_cast<const Xtc*>(&tr+1);
+		ndg->insert(tc,tc.payload());
+	      }
 	      post(*ndg);
 	    }
 	  }
