@@ -1,3 +1,5 @@
+2009-Sep-11	weaver	Added payload to transitions from control level (for recording configuration).
+			Capped printout from event-builders.
 2009-Sep-10 tomytsai  Add Epics data collector level 1 (segment) node library in pds/epicsArch.
 2009-Aug-22	weaver	Fixed overflow of nbins in MonDescXXX.  Added method for
 			removing groups from MonCds.
